--- a/index.htm
+++ b/index.htm
@@ -11,8 +11,8 @@
     <title>Busino - Creative Agency Bootstrap 5 Template</title>
     <link rel="icon"  href="media/favicon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="sass/bootstrap.css">
-    <link rel="stylesheet" href="sass/style.css">
+    <link rel="stylesheet" href="style/bootstrap.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   </head>
@@ -360,7 +360,6 @@
 
   </div>
   <div class="about-me">
-      <span >© 2022 BUSINO Made with <i class="fa-solid fa-heart"></i> <a href="https://github.com/Kamrantalibli" target="_blank"> by Talibli</a></span>
     </div>
 
     <a class="backto-top" href="#main"><i class="fa-solid fa-angles-up"></i></a> 
